--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 	</head>
 
 	<body
-		class="font-fontPri text-bodyMobile text-skin-text-pri bg-skin-canvas-pri">
+		class="font-fontPri text-bodyMobile font-light text-skin-text-pri/80 bg-skin-canvas-pri">
 		<main class="">
 			<header
 				class="pt-8 px-6 min-h-[300px] bg-[url('../assets/images/image-hero-mobile.jpg')] bg-center bg-cover">
@@ -99,16 +99,88 @@
 				</section>
 			</article>
 			<section
-				class="mt-60 mx-auto max-w-[327px] pt-10 pb-8 px-4 bg-skin-brand-tert text-center rounded-xl">
-				<div class="space-y-3">
-					<p class="text-hdgXl text-skin-brand-pri font-bold">$89,914</p>
-					<p>of $100,000 backed</p>
+				class="mt-72 mb-8 mx-auto max-w-[327px] py-10 px-6 bg-skin-brand-tert text-center rounded-xl">
+				<div class="mb-8">
+					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
+						$89,914
+					</p>
+					<p class="mb-6">of $100,000 backed</p>
 					<div
-						class="w-[80px] mx-auto border-spacing-1 border-skin-text-pri border-b-2"></div>
+						class="w-[80px] mx-auto border-spacing-1 border-skin-text-pri border-b-2 opacity-20"></div>
 				</div>
-				<div class="space-y-3">
-					<p class="text-hdgXl text-skin-brand-pri font-bold">$89,914</p>
-					<p>of $100,000 backed</p>
+				<div class="mb-8">
+					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
+						5,007
+					</p>
+					<p class="mb-6">total backers</p>
+					<div
+						class="w-[80px] mx-auto border-spacing-1 border-skin-text-pri border-b-2 opacity-20"></div>
+				</div>
+				<div class="mb-8">
+					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">56</p>
+					<p class="mb-6">days left</p>
+				</div>
+				<div class="relative w-full h-[12px] bg-gray-100 rounded-xl">
+					<div
+						class="absolute inset-0 w-[80%] h-[12px] bg-skin-brand-accent rounded-md"></div>
+				</div>
+			</section>
+			<section
+				class="mx-auto max-w-[327px] py-10 px-6 space-y-6 bg-skin-brand-tert rounded-xl">
+				<h2 class="text-hdgS font-bold text-skin-brand-pri">
+					About this project
+				</h2>
+				<p>
+					The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
+					platform that elevates your screen to a more comfortable viewing
+					height. Placing your monitor at eye level has the potential to
+					improve your posture and make you more comfortable while at work,
+					helping you stay focused on the task at hand.
+				</p>
+				<p>
+					Featuring artisan craftsmanship, the simplicity of design creates
+					extra desk space below your computer to allow notepads, pens, and
+					USB sticks to be stored under the stand.
+				</p>
+				<div class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl">
+					<h2 class="mb-2 text-skin-brand-pri font-bold">Barmboo Stand</h2>
+					<h3 class="mb-6 text-skin-brand-accent">Pledge $24 or more</h3>
+					<p class="mb-8">
+						You get an ergonomic stand made of natural bamboo. You've
+						helped us launch our promotional campaign, and you’ll be added
+						to a special Backer member list.
+					</p>
+					<div class="mb-8">
+						<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+							>101</span
+						>
+						<span class="text-bodyDesktop">left</span>
+					</div>
+					<button
+						class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert font-bold">
+						Select Reward
+					</button>
+				</div>
+				<div class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl">
+					<h2 class="mb-2 text-skin-brand-pri font-bold">
+						Black Edition Stand
+					</h2>
+					<h3 class="mb-6 text-skin-brand-accent">Pledge $75 or more</h3>
+					<p class="mb-8">
+						You get a Black Special Edition computer stand and a personal
+						thank you. You’ll be added to our Backer member list. Shipping
+						is included.
+					</p>
+					<div class="mb-8">
+						<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+							>64</span
+						>
+						<span class="text-bodyDesktop">left</span>
+					</div>
+					<button
+						class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert font-bold">
+						Select Reward
+					</button>
 				</div>
 			</section>
 		</main>
