--- a/src/index.html
+++ b/src/index.html
@@ -29,27 +29,47 @@
 	</head>
 
 	<body
-		class="font-fontPri text-bodyMobile font-light text-skin-text-pri/80 bg-skin-canvas-pri">
+		class="font-fontPri text-bodyMobile md:text-bodyDesktop font-light text-skin-text-pri/80 bg-skin-canvas-pri">
 		<main class="">
 			<header
-				class="pt-8 px-6 min-h-[300px] bg-[url('../assets/images/image-hero-mobile.jpg')] bg-center bg-cover">
+				class="pt-8 px-6 md:px-20 min-h-[300px] md:min-h-[400px] bg-[url('../assets/images/image-hero-mobile.jpg')] bg-center bg-cover">
 				<nav class="flex items-center justify-between">
-					<svg width="128" height="20" xmlns="http://www.w3.org/2000/svg">
+					<svg
+						class="cursor-pointer"
+						width="128"
+						height="20"
+						xmlns="http://www.w3.org/2000/svg">
 						<path
 							d="M7.272 20c2.69 0 5.022-1.4 6.202-3.54L9.88 14.402c-.439.96-1.454 1.537-2.662 1.537-1.783 0-3.1-1.29-3.1-3.184 0-1.893 1.317-3.183 3.1-3.183 1.208 0 2.196.576 2.662 1.537l3.595-2.086c-1.18-2.113-3.54-3.512-6.202-3.512C3.101 5.51 0 8.666 0 12.755 0 16.845 3.101 20 7.272 20zm11.367-.384v-6.202c0-2.717 2.415-3.403 4.116-3.129V5.62c-1.728 0-3.567.878-4.116 2.717V5.895h-4.116v13.72h4.116zM30.116 20c4.034 0 7.272-3.156 7.272-7.245s-3.238-7.244-7.272-7.244c-4.034 0-7.272 3.155-7.272 7.244 0 4.09 3.238 7.245 7.272 7.245zm0-4.007c-1.784 0-3.156-1.29-3.156-3.238s1.372-3.238 3.156-3.238 3.156 1.29 3.156 3.238c0 1.949-1.372 3.238-3.156 3.238zm15.181 3.623l2.196-7.327 2.195 7.327h3.842l4.39-13.721h-4.39l-1.976 7.354-2.14-7.354h-3.842l-2.14 7.354-1.977-7.354h-4.39l4.39 13.72h3.842zM64.156 20c1.839 0 3.183-.631 4.089-1.674v1.29h4.116V.406h-4.116v6.778c-.906-1.042-2.25-1.673-4.089-1.673-3.595 0-6.559 3.155-6.559 7.244 0 4.09 2.964 7.245 6.559 7.245zm.823-3.897c-1.893 0-3.265-1.29-3.265-3.348s1.372-3.348 3.265-3.348c1.894 0 3.266 1.29 3.266 3.348s-1.372 3.348-3.266 3.348zm14.66 3.513v-9.77h2.552V5.895H79.64c0-1.592 1.016-2.058 2.552-1.921V.022c-4.555-.274-6.668 2.03-6.668 5.873h-1.839v3.951h1.839v9.77h4.116zm8.266.384c1.811 0 3.184-.659 3.925-1.674v1.29h4.116V5.895H91.83v7.491c0 1.949-1.043 2.827-2.553 2.827-1.317 0-2.387-.796-2.387-2.497V5.895h-4.116v8.424c0 3.705 2.36 5.681 5.131 5.681zm14.44-.384v-7.492c0-1.948 1.044-2.826 2.553-2.826 1.317 0 2.387.795 2.387 2.497v7.82h4.117v-8.424c0-3.705-2.36-5.68-5.132-5.68-1.811 0-3.183.658-3.924 1.673v-1.29h-4.117v13.722h4.117zm17.02.384c1.84 0 3.184-.631 4.09-1.674v1.29h4.116V.406h-4.116v6.778c-.906-1.042-2.25-1.673-4.09-1.673-3.594 0-6.558 3.155-6.558 7.244 0 4.09 2.964 7.245 6.559 7.245zm.824-3.897c-1.893 0-3.265-1.29-3.265-3.348s1.372-3.348 3.265-3.348c1.894 0 3.266 1.29 3.266 3.348s-1.372 3.348-3.266 3.348z"
 							fill="#FFF"
 							fill-rule="nonzero" />
 					</svg>
-					<svg width="16" height="15" xmlns="http://www.w3.org/2000/svg">
+					<svg
+						class="cursor-pointer md:hidden"
+						width="16"
+						height="15"
+						xmlns="http://www.w3.org/2000/svg">
 						<g fill="#FFF" fill-rule="evenodd">
 							<path d="M0 0h16v3H0zM0 6h16v3H0zM0 12h16v3H0z" />
 						</g>
 					</svg>
+					<ul class="hidden space-x-10 md:flex">
+						<li class="text-skin-brand-tert text-[13px] cursor-pointer">
+							About
+						</li>
+						<li class="text-skin-brand-tert text-[13px] cursor-pointer">
+							Discover
+						</li>
+						<li class="text-skin-brand-tert text-[13px] cursor-pointer">
+							Get Started
+						</li>
+					</ul>
 				</nav>
 			</header>
 			<article class="relative mx-6 flex justify-center">
+				<!-- Hero section -->
 				<section
-					class="absolute -top-12 max-w-[327px] pt-10 pb-8 px-4 bg-skin-brand-tert text-center space-y-6 rounded-xl">
+					class="relative -top-12 md:-top-16 max-w-[327px] md:max-w-[730px] md:w-[730px] pt-10 pb-8 px-4 md:px-10 bg-skin-brand-tert text-center space-y-6 rounded-xl">
 					<div class="relative flex justify-center">
 						<svg
 							class="absolute -top-16"
@@ -70,7 +90,7 @@
 						</svg>
 					</div>
 					<h1
-						class="max-w-[225px] mx-auto text-skin-brand-pri font-bold text-hdgM">
+						class="max-w-[225px] md:max-w-none mx-auto text-skin-brand-pri font-bold text-hdgM md:text-hdgL">
 						Mastercraft Bamboo Monitor Riser
 					</h1>
 					<p>
@@ -79,54 +99,72 @@
 					</p>
 					<div class="flex items-center justify-between">
 						<button
-							class="py-4 px-12 text-bodyDesktop bg-skin-brand-accent rounded-3xl cursor-pointer text-skin-brand-tert">
+							onclick="openDialog()"
+							class="py-3 px-10 text-bodyDesktop bg-skin-brand-accent rounded-3xl cursor-pointer text-skin-brand-tert hover:bg-skin-active-brand-accent">
 							Back this project
 						</button>
-						<div class="cursor-pointer">
+						<button
+							class="contents group cursor-pointer bg-skin-brand-sec/20 pr-6 rounded-full md:flex md:items-center md:space-x-2">
 							<svg
+								class=""
 								width="56"
 								height="56"
 								xmlns="http://www.w3.org/2000/svg">
 								<g fill="none" fill-rule="evenodd">
-									<circle fill="#2F2F2F" cx="28" cy="28" r="28" />
+									<circle
+										class="fill-skin-dim-brand-accent group-hover:fill-skin-dim-brand-accent/60"
+										fill=""
+										cx="28"
+										cy="28"
+										r="28" />
 									<path
 										fill="#B1B1B1"
 										d="M23 19v18l5-5.058L33 37V19z" />
 								</g>
 							</svg>
-						</div>
+							<span
+								class="hidden md:inline text-bodyDesktop font-semibold"
+								>Bookmark</span
+							>
+						</button>
 					</div>
 				</section>
 			</article>
+			<!-- Metrics Section -->
 			<section
-				class="mt-72 mb-8 mx-auto max-w-[327px] py-10 px-6 bg-skin-brand-tert text-center rounded-xl">
-				<div class="mb-8">
-					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
-						$89,914
-					</p>
-					<p class="mb-6">of $100,000 backed</p>
+				class="mx-auto -mt-6 md:-mt-10 max-w-[327px] md:max-w-[730px] py-10 px-6 md:px-10 bg-skin-brand-tert text-center md:text-left rounded-xl">
+				<div class="contents md:flex md:space-x-20">
+					<div class="mb-6">
+						<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
+							$89,914
+						</p>
+						<p class="mb-4">of $100,000 backed</p>
+					</div>
 					<div
-						class="w-[80px] mx-auto border-spacing-1 border-skin-text-pri border-b-2 opacity-20"></div>
-				</div>
-				<div class="mb-8">
-					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
-						5,007
-					</p>
-					<p class="mb-6">total backers</p>
+						class="mb-8 w-[80px] md:w-0 md:h-[63px] mx-auto md:mx-0 border-spacing-1 border-skin-text-pri border-b-2 md:border-b-0 md:border-l-2 opacity-20"></div>
+					<div class="mb-6">
+						<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
+							5,007
+						</p>
+						<p class="mb-6">total backers</p>
+					</div>
 					<div
-						class="w-[80px] mx-auto border-spacing-1 border-skin-text-pri border-b-2 opacity-20"></div>
-				</div>
-				<div class="mb-8">
-					<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">56</p>
-					<p class="mb-6">days left</p>
+						class="mb-8 w-[80px] md:w-0 md:h-[63px] mx-auto md:mx-0 border-spacing-1 border-skin-text-pri border-b-2 md:border-b-0 md:border-l-2 opacity-20"></div>
+					<div class="mb-6">
+						<p class="mb-3 text-hdgXl text-skin-brand-pri font-bold">
+							56
+						</p>
+						<p class="mb-6">days left</p>
+					</div>
 				</div>
 				<div class="relative w-full h-[12px] bg-gray-100 rounded-xl">
 					<div
 						class="absolute inset-0 w-[80%] h-[12px] bg-skin-brand-accent rounded-md"></div>
 				</div>
 			</section>
+			<!-- About Section -->
 			<section
-				class="mx-auto max-w-[327px] py-10 px-6 space-y-6 bg-skin-brand-tert rounded-xl">
+				class="mx-auto mt-6 max-w-[327px] md:max-w-[730px] py-10 px-6 space-y-6 md:space-y-8 bg-skin-brand-tert rounded-xl">
 				<h2 class="text-hdgS font-bold text-skin-brand-pri">
 					About this project
 				</h2>
@@ -143,141 +181,161 @@
 					USB sticks to be stored under the stand.
 				</p>
 				<div class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl">
-					<h2 class="mb-2 text-skin-brand-pri font-bold">Barmboo Stand</h2>
-					<h3 class="mb-6 text-skin-brand-accent">Pledge $24 or more</h3>
+					<div class="contents md:flex md:justify-between">
+						<h2 class="mb-2 text-skin-brand-pri font-bold">
+							Bamboo Stand
+						</h2>
+						<h3 class="mb-6 text-skin-brand-accent">
+							Pledge $24 or more
+						</h3>
+					</div>
 					<p class="mb-8">
 						You get an ergonomic stand made of natural bamboo. You've
 						helped us launch our promotional campaign, and you’ll be added
 						to a special Backer member list.
 					</p>
-					<div class="mb-8">
-						<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
-							>101</span
-						>
-						<span class="text-bodyDesktop">left</span>
+					<div class="contents md:flex md:items-center md:justify-between">
+						<div class="mb-8 md:mb-0 flex">
+							<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+								>101</span
+							>
+							<span class="text-bodyDesktop">left</span>
+						</div>
+						<button
+							class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert hover:bg-skin-active-brand-accent font-bold">
+							Select Reward
+						</button>
 					</div>
-					<button
-						class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert font-bold">
-						Select Reward
-					</button>
 				</div>
 				<div class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl">
-					<h2 class="mb-2 text-skin-brand-pri font-bold">
-						Black Edition Stand
-					</h2>
-					<h3 class="mb-6 text-skin-brand-accent">Pledge $75 or more</h3>
+					<div class="contents md:flex md:items-center md:justify-between">
+						<h2 class="mb-2 text-skin-brand-pri font-bold">
+							Black Edition Stand
+						</h2>
+						<h3 class="mb-6 text-skin-brand-accent">
+							Pledge $75 or more
+						</h3>
+					</div>
 					<p class="mb-8">
 						You get a Black Special Edition computer stand and a personal
 						thank you. You’ll be added to our Backer member list. Shipping
 						is included.
 					</p>
-					<div class="mb-8">
-						<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
-							>64</span
-						>
-						<span class="text-bodyDesktop">left</span>
+					<div class="contents md:flex md:items-center md:justify-between">
+						<div class="mb-8 md:mb-0 flex">
+							<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+								>64</span
+							>
+							<span class="text-bodyDesktop">left</span>
+						</div>
+						<button
+							class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert hover:bg-skin-active-brand-accent font-bold">
+							Select Reward
+						</button>
 					</div>
-					<button
-						class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert font-bold">
-						Select Reward
-					</button>
+				</div>
+				<div
+					class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl opacity-50">
+					<div class="contents md:flex md:items-center md:justify-between">
+						<h2 class="mb-2 text-skin-brand-pri font-bold">
+							Mahogany Special Edition
+						</h2>
+						<h3 class="mb-6 text-skin-brand-accent">
+							Pledge $200 or more
+						</h3>
+					</div>
+					<p class="mb-8">
+						You get two Special Edition Mahogany stands, a Backer T-Shirt,
+						and a personal thank you. You’ll be added to our Backer member
+						list. Shipping is included.
+					</p>
+					<div class="contents md:flex md:items-center md:justify-between">
+						<div class="mb-8 md:mb-0 flex">
+							<span class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+								>0</span
+							>
+							<span class="text-bodyDesktop">left</span>
+						</div>
+						<button
+							class="py-3 px-8 rounded-full cursor-pointer bg-skin-text-pri text-skin-brand-tert font-bold">
+							Out of Stock
+						</button>
+					</div>
 				</div>
 			</section>
+			<dialog
+				id="projects-dialog"
+				class="mt-28 rounded-lg py-8 px-4 text-skin-text-pri/80 font-light">
+				<div class="mb-6 flex items-center justify-between">
+					<h2 class="text-skin-brand-pri font-bold text-hdgS">
+						Back this project
+					</h2>
+					<svg
+						class="fill-bg-skin-text-pri/80 cursor-pointer"
+						onclick="closeDialog()"
+						width="15"
+						height="15"
+						xmlns="http://www.w3.org/2000/svg">
+						<path
+							d="M11.314 0l2.828 2.828L9.9 7.071l4.243 4.243-2.828 2.828L7.07 9.9l-4.243 4.243L0 11.314 4.242 7.07 0 2.828 2.828 0l4.243 4.242L11.314 0z"
+							fill=""
+							fill-rule="evenodd"
+							opacity=".4" />
+					</svg>
+				</div>
+				<p class="mb-6">
+					Want to support us in bringing Mastercraft Bamboo Monitor Riser
+					out in the world?
+				</p>
+				<form class="space-y-6">
+					<div
+						class="py-6 px-6 border-2 border-skin-text-pri/20 rounded-xl">
+						<div class="flex items-center md:justify-between">
+							<div class="w-full text-left">
+								<input
+									class="form-radio w-[31px] h-[31px] focus:ring-skin-active-brand-accent checked:text-transparent"
+									type="radio"
+									id="radio-metric"
+									name="unitMeasurements"
+									autocomplete="off"
+									value="metric" />
+								<label
+									class="ml-4 text-skin-brand-pri font-bold"
+									for="radio-metric"
+									>Pledge with no reward</label
+								>
+							</div>
+							<h2 class="mb-2 text-skin-brand-pri font-bold">
+								Black Edition Stand
+							</h2>
+							<h3 class="mb-6 text-skin-brand-accent">
+								Pledge $75 or more
+							</h3>
+						</div>
+						<p class="mb-8">
+							You get a Black Special Edition computer stand and a
+							personal thank you. You’ll be added to our Backer member
+							list. Shipping is included.
+						</p>
+						<div
+							class="contents md:flex md:items-center md:justify-between">
+							<div class="mb-8 md:mb-0 flex">
+								<span
+									class="text-skin-brand-pri font-bold text-hdgXl mr-2"
+									>64</span
+								>
+								<span class="text-bodyDesktop">left</span>
+							</div>
+							<button
+								class="py-3 px-8 rounded-full cursor-pointer bg-skin-brand-accent text-skin-brand-tert hover:bg-skin-active-brand-accent font-bold">
+								Select Reward
+							</button>
+						</div>
+					</div>
+				</form>
+			</dialog>
 		</main>
 		<script src="main.js" async></script>
 		<!-- May use defer instead of async in script tag -->
 	</body>
 </html>
-
-<!-- About
- 
-
- 
-  5,007 total backers
-  56 days left
-
-  About this project
-
-  The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-  to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-  your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
-
-  Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-  to allow notepads, pens, and USB sticks to be stored under the stand.
-  
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-  you’ll be added to a special Backer member list.
-  101 left
-  Select Reward
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-  member list. Shipping is included.
-  64 left
-  Select Reward
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-  to our Backer member list. Shipping is included.
-  0 left
-  Out of Stock -->
-
-<!-- Selection modal start -->
-
-<!-- Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left -->
-
-<!-- Selected pledge start -->
-<!-- Enter your pledge
-  $25
-  Continue -->
-<!-- Selected pledge end -->
-
-<!-- Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left -->
-
-<!-- Selected pledge start -->
-<!-- Enter your pledge
-  $75
-  Continue -->
-<!-- Selected pledge end -->
-
-<!-- Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left -->
-
-<!-- Selected pledge  start -->
-<!-- Enter your pledge
-  $200
-  Continue -->
-<!-- Selected pledge end -->
-
-<!-- Selection modal end -->
-
-<!-- Success modal start -->
-
-<!-- Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it! -->
-
-<!-- Success modal end -->
