modified radio button

--- a/src/index.html
+++ b/src/index.html
@@ -293,7 +293,7 @@
 						<div class="flex items-center md:justify-between">
 							<div class="w-full text-left">
 								<input
-									class="form-radio w-[31px] h-[31px] focus:ring-skin-active-brand-accent checked:text-transparent"
+									class="w-[24px] h-[24px] border-none ring-2 ring-skin-text-pri/40 text-white focus:ring-2 focus:ring-skin-text-pri/40"
 									type="radio"
 									id="radio-metric"
 									name="unitMeasurements"
